helm/yaml/prom-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: prometheus
spec:
  gateways:
    - prometheus
  hosts:
    - prometheus.xiejiawen.com
  http:
  - route:
    - destination:
        host: prometheus-kube-prometheus-prometheus.default.svc.cluster.local
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: prometheus
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - prometheus.xiejiawen.com
      port:
        name: http-prom
        number: 80
        protocol: HTTP
